# LeeOS

./: .gdbinit  .gitignore  Cargo.toml  LICENSE  Makefile  bochsrc  bochsrc.gdb  bx_enh_dbg.ini  tags  x86_64-unknown-leeos.json
.cargo/: config  config.toml
builtins/: Cargo.toml  Makefile
builtins/.cargo/: config.toml
builtins/src/: lang_items.rs  lib.rs
document/: mount实现.md  rust添加新的后端.md  主引导扇区.md  动态重定位.md
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/src/: lib.rs  linker.ld
kernel/src/asm/: context.asm
kernel/src/boot/: boot.asm  loader.asm
kernel/src/crypto/: crc16.rs  crc32c.rs  crc32table.rs  mod.rs
kernel/src/fs/: dcache.rs  dev.rs  ext4.rs  file.rs  fs.rs  fs_context.rs  ida.rs  inode.rs  libfs.rs  mnt_idmapping.rs  mod.rs  mount.rs  namei.rs  ns_common.rs  ntfs.rs  path.rs  pnode.rs  super_block.rs
kernel/src/kernel/: bitops.rs  buffer.rs  clock.rs  console.rs  cpu.rs  device.rs  elf64.rs  entry.asm  errno_base.rs  execve.rs  fork.rs  fpu.rs  global.rs  idle.rs  input.rs  interrupt.asm  interrupt.rs  io.rs  keyboard.rs  lang_items.rs  list.rs  math.rs  mod.rs  process.rs  ramdisk.rs  relocation.rs  rtc.rs  sched.rs  semaphore.rs  string.rs  syscall.rs  syscall_defs.rs  time.rs
kernel/src/mm/: memory.rs  mm_type.rs  mmap.rs  mod.rs  page.rs  shmem.rs  slub.rs
lib/: Cargo.toml  Makefile
lib/.cargo/: config.toml
lib/src/: lang_items.rs  lib.rs  macros.rs  print.rs  syscall_defs.rs  unistd.rs
proc_macro/: Cargo.toml
src/: linker.ld  main.rs
src/asm/: context.asm
utils/: image.mk  master.sfdisk  slave.sfdisk
(+47 files in other folders)
