[package]
name = "lee_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitfield = "0.14.0"
bitflags = "2.5.0"
buddy_system_allocator = "0.9"
compiler_builtins = "0.1.101"
static_assertions = "1.1.0"